<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InputActivity"
    android:background="@color/bg">

    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/add_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/add_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="2"
        android:gravity="top"
        android:hint="@string/add_content"
        android:inputType="text|textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="buttonSad"
            android:text="@string/mood_sad"
            app:srcCompat="@drawable/sad" />

        <Button
            android:id="@+id/buttonDead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="buttonDead"
            android:text="@string/mood_dead"
            app:srcCompat="@drawable/dead" />

        <Button
            android:id="@+id/buttonTired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="buttonTired"
            android:text="@string/mood_tired"
            app:srcCompat="@drawable/tired" />

        <Button
            android:id="@+id/buttonHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="buttonHappy"
            android:text="@string/mood_happy"
            app:srcCompat="@drawable/smile" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addEntry"
        android:text="@string/add_button" />

</LinearLayout>