<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/entry_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:rotation="90" />

    <LinearLayout
        android:id="@+id/entry_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:text="@string/list_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/list_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:text="@string/list_timestamp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_mood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:text="@string/list_mood"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>