<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:background="@color/bg">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/detail_title"
        android:textAlignment="center"
        android:textSize="32sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/detail_timestamp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/detail_mood"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/detail_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:rotation="270"/>


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:text="@string/detail_content"
        android:textSize="18sp" />

</LinearLayout>